# Concurrent

./: .gitignore  CMakeLists.txt  ConcConfig.h.in  Doxyfile  Main.cpp  Readme.md
concurrent/: async_object.hpp  object.hpp  queue.hpp  sync_object.hpp
concurrent/channel/: channel.hpp
concurrent/cow/: CoW.hpp
concurrent/cow/collection/: array.hpp
concurrent/cow/internal/: cloner.hpp
error_handling/: expected.hpp  scope_guard.hpp
tests/: test_asyncObj.hpp  test_channel.hpp  test_scopeguard.hpp  test_syncObj.hpp
util/: detect.hpp  member_swap.hpp
